Vendor CSS has been added.

--- a/src/stubs/resources/sass/tabler.scss
+++ b/src/stubs/resources/sass/tabler.scss
@@ -9,6 +9,21 @@
 // ENABLE the following line for Right-to-Left (RTL) support.
 // @import "../../node_modules/@tabler/core/dist/css/tabler.rtl.css";
 
+// Tabler Vendor Styles.
+@import "../../node_modules/@tabler/core/src/scss/tabler-vendors";
+
+// Tabler Flags Styles.
+// ENABLE the following line for Flags Icon style support.
+// @import "../../node_modules/@tabler/core/src/scss/tabler-flags";
+
+// Tabler Payment Styles.
+// ENABLE the following line for Payment Icon style support.
+// @import "../../node_modules/@tabler/core/src/scss/tabler-payments";
+
+// Tabler Social Styles.
+// ENABLE the following line for Social Icon style support.
+// @import "../../node_modules/@tabler/core/src/scss/tabler-social";
+
 // Tabler Webfont Icons
 @import "../../node_modules/@tabler/icons-webfont/tabler-icons.css";
 
