Update Package and fix tabler icon fonts.

--- a/src/stubs/resources/sass/tabler.scss
+++ b/src/stubs/resources/sass/tabler.scss
@@ -30,7 +30,7 @@
 // @import "../../node_modules/@tabler/core/scss/tabler-socials";
 
 // Tabler Webfont Icons
-@import "../../node_modules/@tabler/icons-webfont/dist/tabler-icons";
+@import "@tabler/icons-webfont/dist/tabler-icons.css";
 
 // Custom Icon Sizes and Styles
 @import "../css/icon-style.css";
